--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,10 +1,20 @@
 unbind C-b
 set -g prefix C-a
+
+unbind-key %
+unbind-key '"'
+bind-key | split-window -v
+bind-key - split-window -h
+
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
-#set-option -g mouse-select-pane on
+set-option -g mouse-select-pane on
 bind D source-file ~/.tmux_dev1
-#set -g mode-mouse on
-set -g mouse on
+bind F source-file ~/.tmux_dev2
+set -g mode-mouse on
+unbind r
+bind r source-file ~/.tmux.conf
+
+
