fixed vertical/horizontal split

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,17 +3,18 @@ set -g prefix C-a
 
 unbind-key %
 unbind-key '"'
-bind-key | split-window -v
-bind-key - split-window -h
+bind-key | split-window -h
+bind-key - split-window -v
 
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
-set-option -g mouse-select-pane on
+# set-option -g mouse-select-pane on
 bind D source-file ~/.tmux_dev1
 bind F source-file ~/.tmux_dev2
-set -g mode-mouse on
+#set -g mode-mouse on
+set -g mouse on
 unbind r
 bind r source-file ~/.tmux.conf
 
